authentication/policies/namespace-wide-peerauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "namespace-level"
  namespace: "foo"
spec:
  mtls:
    mode: STRICT
