authentication/policies/auth-test-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-test-deployment
  labels:
    app: auth-test
#  annotations:
#    sidecar.istio.io/inject: "true"
spec:
  selector:
    matchLabels:
      app: auth-test
  template:
    metadata:
      labels:
        app: auth-test
    spec:
      serviceAccountName: auth-test-sa
      containers:
      - name: auth-test
        image: auth:t1
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-test-service
  labels:
    app: auth-test
spec:
  selector:
    app: auth-test
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8001
