authentication/policies/destinationRule-mTLS-DISABLE.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "auth-test-dr-legacy"
 namespace: "legacy"
spec:
 host: "auth-test-service.legacy.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
